feat: 添加模态和自定义表单支持并升级至Paper API
- 新增ModalForm和CustomForm表单类型支持
- 迁移至Paper API 1.21.4并更新相关依赖
- 添加confirm.yml和settings.yml示例菜单
- 实现URL图标支持及安全验证
- 更新文档说明新增的表单类型和功能
- 重构代码结构，优化表单处理逻辑